--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 .map(function(m){
                   choosed[getKey(m)] = 1;
                   list[m.index].style.color = color;
-                  return m.name + '<br/>' + m.phone; 
+                  return m.phone; 
                 });
             localStorage.setItem('choosed', JSON.stringify(choosed));
             return ret;
